website/deploy/development/deployment-increase-memory-limit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  template:
    spec:
      containers:
        - name: snack
          resources:
            limits:
              memory: 2G
