website/deploy/development/deployment-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  template:
    spec:
      containers:
        - name: snack
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 20
          livenessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 20
