website/deploy/development/ingress-spec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snack
spec:
  rules:
  - host: snack.expo.test
    http:
      paths:
      - backend:
          service:
            name: snack
            port:
              number: 80
        path: /
        pathType: Prefix
